--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "baseUrl": "./src",
     "typeRoots": ["./node_modules/@types"],
     "declaration": true,
+    "target": "ES6",
     "outDir": "dist"
   }
 }
