--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
   "repository": "github:grafana/grafana-experimental",
   "author": "Grafana Labs <team@grafana.com> (https://grafanap.com)",
   "license": "Apache-2.0",
-  "dependencies": {
-    "@emotion/css": "^11.5.0",
-    "react": "^17.0.2"
+  "peerDependencies": {
+    "react": "17.0.1",
+    "@emotion/css": "11.1.3",
+    "react-select": "5.2.1"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.13.12",
@@ -40,7 +41,6 @@
     "@types/jest": "27.0.3",
     "@types/node": "10.14.1",
     "@types/react": "16.8.16",
-    "@types/react-select": "4.0.13",
     "@types/react-test-renderer": "^17.0.1",
     "@types/rollup-plugin-visualizer": "2.6.0",
     "@types/sinon": "^7.5.2",
