--- a/package.json
+++ b/package.json
@@ -56,5 +56,6 @@
     "rollup-plugin-visualizer": "3.3.1",
     "sinon": "8.1.1",
     "typescript": "^4.5.2"
-  }
+  },
+  "packageManager": "yarn@3.1.1"
 }
