--- a/package.json
+++ b/package.json
@@ -22,13 +22,18 @@
   "license": "Apache-2.0",
   "peerDependencies": {
     "@emotion/css": "11.1.3",
+    "@grafana/data": "*",
+    "@grafana/tsconfig": "*",
+    "@grafana/ui": "*",
     "react": "17.0.1",
     "react-select": "5.2.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.13.12",
     "@babel/preset-env": "^7.13.12",
     "@babel/preset-react": "^7.13.13",
     "@babel/preset-typescript": "^7.13.0",
+    "@emotion/css": "11.1.3",
     "@grafana/data": "canary",
     "@grafana/tsconfig": "^1.0.0-rc1",
     "@grafana/ui": "canary",
@@ -47,6 +52,8 @@
     "babel-jest": "^26.6.3",
     "jest": "^27.3.1",
     "pretty-format": "25.1.0",
+    "react": "17.0.1",
+    "react-select": "5.2.1",
     "react-test-renderer": "^17.0.2",
     "rimraf": "^3.0.2",
     "rollup": "2.0.6",
