--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@grafana/experimental",
-  "version": "0.0.1",
+  "version": "0.0.2-canary.0",
   "description": "Experimental Grafana components and APIs",
   "main": "index.js",
   "types": "dist/index.d.ts",
@@ -21,17 +21,17 @@
   "author": "Grafana Labs <team@grafana.com> (https://grafanap.com)",
   "license": "Apache-2.0",
   "peerDependencies": {
-    "react": "17.0.1",
     "@emotion/css": "11.1.3",
+    "react": "17.0.1",
     "react-select": "5.2.1"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.13.12",
     "@babel/preset-react": "^7.13.13",
     "@babel/preset-typescript": "^7.13.0",
+    "@grafana/data": "canary",
     "@grafana/tsconfig": "^1.0.0-rc1",
     "@grafana/ui": "canary",
-    "@grafana/data": "canary",
     "@rollup/plugin-commonjs": "11.0.2",
     "@rollup/plugin-json": "4.0.3",
     "@rollup/plugin-node-resolve": "7.1.1",
