--- a/package.json
+++ b/package.json
@@ -55,5 +55,9 @@
     "rollup-plugin-visualizer": "3.3.1",
     "sinon": "8.1.1",
     "typescript": "^4.5.2"
+  },
+  "dependencies": {
+    "@types/uuid": "^8.3.3",
+    "uuid": "^8.3.2"
   }
 }
