Adds template variables to completion (#25)
* Adds template variables to completion

* Add command

* Fix deps

* Add whitespace after snippet and add template variables to first position after WHERE keyword

* Correctly identify template variables when resolving the position

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@grafana/toolkit": "^8.5.0-55750pre",
     "@grafana/tsconfig": "^1.0.0-rc1",
     "@grafana/ui": "canary",
+    "@grafana/runtime": "canary",
     "@rollup/plugin-commonjs": "11.0.2",
     "@rollup/plugin-json": "4.0.3",
     "@rollup/plugin-node-resolve": "7.1.1",
