--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "bundle": "rollup -c rollup.config.ts",
     "clean": "rimraf ./dist ./compiled",
     "typecheck": "tsc --noEmit",
-    "test": "jest --notify --watch"
+    "test": "jest --notify --watch",
+    "storybook": "start-storybook -p 6006",
+    "storybook:build": "build-storybook"
   },
   "files": [
     "index.js",
@@ -28,6 +30,8 @@
     "@babel/preset-env": "^7.13.12",
     "@babel/preset-react": "^7.13.13",
     "@babel/preset-typescript": "^7.13.0",
+    "@babel/plugin-proposal-class-properties": "^7.17.12",
+    "@babel/plugin-transform-modules-commonjs": "^7.18.2",
     "@grafana/data": "canary",
     "@grafana/toolkit": "^8.5.0-55750pre",
     "@grafana/tsconfig": "^1.0.0-rc1",
@@ -36,6 +40,12 @@
     "@rollup/plugin-commonjs": "11.0.2",
     "@rollup/plugin-json": "4.0.3",
     "@rollup/plugin-node-resolve": "7.1.1",
+    "@storybook/addon-actions": "^6.5.9",
+    "@storybook/addon-essentials": "^6.5.9",
+    "@storybook/addon-links": "^6.5.9",
+    "@storybook/addons": "^6.5.9",
+    "@storybook/react": "^6.5.9",
+    "@storybook/theming": "^6.5.9",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.5",
     "@testing-library/react-hooks": "^5.1.0",
@@ -46,6 +56,7 @@
     "@types/rollup-plugin-visualizer": "2.6.0",
     "@types/sinon": "^7.5.2",
     "babel-jest": "^26.6.3",
+    "copy-webpack-plugin": "6",
     "jest": "^27.3.1",
     "pretty-format": "25.1.0",
     "react-test-renderer": "^17.0.2",
