--- a/package.json
+++ b/package.json
@@ -22,32 +22,22 @@
   "license": "Apache-2.0",
   "peerDependencies": {
     "@emotion/css": "11.1.3",
-    "react": "17.0.1",
     "react-select": "5.2.1"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.13.12",
-    "@babel/preset-react": "^7.13.13",
-    "@babel/preset-typescript": "^7.13.0",
-    "@grafana/data": "canary",
-    "@grafana/runtime": "canary",
     "@grafana/toolkit": "canary",
     "@grafana/tsconfig": "^1.0.0-rc1",
-    "@grafana/ui": "canary",
     "@rollup/plugin-commonjs": "11.0.2",
     "@rollup/plugin-json": "4.0.3",
     "@rollup/plugin-node-resolve": "7.1.1",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.5",
     "@testing-library/react-hooks": "^5.1.0",
-    "@types/jest": "27.0.3",
     "@types/node": "10.14.1",
     "@types/react": "16.8.16",
     "@types/react-test-renderer": "^17.0.1",
     "@types/rollup-plugin-visualizer": "2.6.0",
-    "@types/sinon": "^7.5.2",
-    "babel-jest": "^26.6.3",
-    "jest": "^27.3.1",
+    "node-notifier": "^10.0.1",
     "pretty-format": "25.1.0",
     "react-test-renderer": "^17.0.2",
     "rimraf": "^3.0.2",
@@ -56,11 +46,15 @@
     "rollup-plugin-terser": "5.3.0",
     "rollup-plugin-typescript2": "^0.31.1",
     "rollup-plugin-visualizer": "3.3.1",
-    "sinon": "8.1.1",
     "typescript": "^4.5.2"
   },
   "dependencies": {
+    "@grafana/data": "canary",
+    "@grafana/runtime": "canary",
+    "@grafana/ui": "canary",
     "@types/uuid": "^8.3.3",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "uuid": "^8.3.2"
   }
 }
