--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@grafana/experimental",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Experimental Grafana components and APIs",
   "main": "index.js",
   "types": "dist/index.d.ts",
@@ -22,11 +22,19 @@
   "license": "Apache-2.0",
   "peerDependencies": {
     "@emotion/css": "11.1.3",
-    "react-select": "5.2.1"
+    "react-select": "5.2.1",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "@grafana/data": "canary",
+    "@grafana/runtime": "canary",
+    "@grafana/ui": "canary"
   },
   "devDependencies": {
     "@grafana/toolkit": "canary",
     "@grafana/tsconfig": "^1.0.0-rc1",
+    "@grafana/data": "canary",
+    "@grafana/runtime": "canary",
+    "@grafana/ui": "canary",
     "@rollup/plugin-commonjs": "11.0.2",
     "@rollup/plugin-json": "4.0.3",
     "@rollup/plugin-node-resolve": "7.1.1",
@@ -40,6 +48,8 @@
     "node-notifier": "^10.0.1",
     "pretty-format": "25.1.0",
     "react-test-renderer": "^17.0.2",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "rimraf": "^3.0.2",
     "rollup": "2.0.6",
     "rollup-plugin-sourcemaps": "0.5.0",
@@ -49,12 +59,7 @@
     "typescript": "^4.5.2"
   },
   "dependencies": {
-    "@grafana/data": "canary",
-    "@grafana/runtime": "canary",
-    "@grafana/ui": "canary",
     "@types/uuid": "^8.3.3",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
     "uuid": "^8.3.2"
   }
 }
