--- a/package.json
+++ b/package.json
@@ -22,19 +22,19 @@
   "license": "Apache-2.0",
   "peerDependencies": {
     "@emotion/css": "11.1.3",
-    "react-select": "5.2.1",
+    "react-select": "^5.2.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "@grafana/data": "canary",
-    "@grafana/runtime": "canary",
-    "@grafana/ui": "canary"
+    "@grafana/data": "^9.2.0",
+    "@grafana/runtime": "^9.2.0",
+    "@grafana/ui": "^9.2.0"
   },
   "devDependencies": {
-    "@grafana/toolkit": "canary",
+    "@grafana/toolkit": "^9.2.0",
     "@grafana/tsconfig": "^1.0.0-rc1",
-    "@grafana/data": "canary",
-    "@grafana/runtime": "canary",
-    "@grafana/ui": "canary",
+    "@grafana/data": "^9.2.0",
+    "@grafana/runtime": "^9.2.0",
+    "@grafana/ui": "^9.2.0",
     "@rollup/plugin-commonjs": "11.0.2",
     "@rollup/plugin-json": "4.0.3",
     "@rollup/plugin-node-resolve": "7.1.1",
