--- a/package.json
+++ b/package.json
@@ -1,21 +1,25 @@
 {
   "name": "@grafana/experimental",
-  "version": "1.4.3",
+  "version": "2.0.0-treeshake01",
   "description": "Experimental Grafana components and APIs",
-  "main": "index.js",
-  "types": "dist/index.d.ts",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "module": "./dist/esm/index.js",
+  "sideEffects": false,
   "scripts": {
     "dev": "yarn bundle -w",
-    "build": "yarn clean && yarn typecheck && yarn bundle",
+    "build": "tsc -p ./tsconfig.json && rollup -c rollup.config.ts",
     "bundle": "rollup -c rollup.config.ts",
     "clean": "rimraf ./dist ./compiled",
-    "typecheck": "tsc --noEmit",
+    "typecheck": "tsc --emitDeclarationOnly false --noEmit",
     "lint": "eslint . --ext .js,.tsx,.ts --cache",
     "test": "jest --notify --watch"
   },
   "files": [
-    "index.js",
-    "dist"
+    "dist",
+    "./README.md",
+    "./CHANGELOG.md",
+    "LICENSE"
   ],
   "repository": "github:grafana/grafana-experimental",
   "author": "Grafana Labs <team@grafana.com> (https://grafana.com)",
@@ -30,14 +34,11 @@
     "@grafana/ui": "^9.2.0"
   },
   "devDependencies": {
-    "@grafana/toolkit": "^9.2.0",
-    "@grafana/tsconfig": "^1.0.0-rc1",
+    "@grafana/tsconfig": "^1.2.0-rc1",
     "@grafana/data": "^9.2.0",
     "@grafana/runtime": "^9.2.0",
     "@grafana/ui": "^9.2.0",
-    "@rollup/plugin-commonjs": "11.0.2",
-    "@rollup/plugin-json": "4.0.3",
-    "@rollup/plugin-node-resolve": "7.1.1",
+    "@rollup/plugin-node-resolve": "15.0.1",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.5",
     "@testing-library/react-hooks": "^5.1.0",
@@ -45,18 +46,17 @@
     "@types/node": "10.14.1",
     "@types/react": "^17.0.0",
     "@types/react-test-renderer": "^17.0.1",
-    "@types/rollup-plugin-visualizer": "2.6.0",
+    "esbuild": "0.16.17",
     "node-notifier": "^10.0.1",
     "pretty-format": "25.1.0",
     "react-test-renderer": "^17.0.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "rimraf": "^3.0.2",
-    "rollup": "2.0.6",
-    "rollup-plugin-sourcemaps": "0.5.0",
-    "rollup-plugin-terser": "5.3.0",
-    "rollup-plugin-typescript2": "^0.31.1",
-    "rollup-plugin-visualizer": "3.3.1",
+    "rollup": "2.79.1",
+    "rollup-plugin-dts": "^5.0.0",
+    "rollup-plugin-esbuild": "5.0.0",
+    "rollup-plugin-node-externals": "^5.0.0",
     "typescript": "^4.5.2"
   },
   "dependencies": {
