--- a/package.json
+++ b/package.json
@@ -26,20 +26,22 @@
   "license": "Apache-2.0",
   "peerDependencies": {
     "@emotion/css": "11.1.3",
-    "react-select": "^5.2.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "@grafana/data": "^9.2.0",
-    "@grafana/runtime": "^9.2.0",
-    "@grafana/ui": "^9.2.0"
-  },
-  "devDependencies": {
-    "@grafana/tsconfig": "^1.2.0-rc1",
     "@grafana/data": "^9.2.0",
     "@grafana/runtime": "^9.2.0",
     "@grafana/ui": "^9.2.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-select": "^5.2.1"
+  },
+  "devDependencies": {
+    "@grafana/data": "^9.2.0",
+    "@grafana/runtime": "^9.2.0",
+    "@grafana/tsconfig": "^1.2.0-rc1",
+    "@grafana/ui": "^9.2.0",
     "@rollup/plugin-node-resolve": "15.0.1",
-    "@testing-library/jest-dom": "^5.11.10",
+    "@swc/core": "^1.3.56",
+    "@swc/jest": "^0.2.26",
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^11.2.5",
     "@testing-library/react-hooks": "^5.1.0",
     "@testing-library/user-event": "^14.4.3",
@@ -47,11 +49,13 @@
     "@types/react": "^17.0.0",
     "@types/react-test-renderer": "^17.0.1",
     "esbuild": "0.16.17",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "node-notifier": "^10.0.1",
     "pretty-format": "25.1.0",
-    "react-test-renderer": "^17.0.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-test-renderer": "^17.0.2",
     "rimraf": "^3.0.2",
     "rollup": "2.79.1",
     "rollup-plugin-dts": "^5.0.0",
