--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "devDependencies": {
     "@grafana/data": "^9.2.0",
+    "@grafana/eslint-config": "^5.1.0",
     "@grafana/runtime": "^9.2.0",
     "@grafana/tsconfig": "^1.2.0-rc1",
     "@grafana/ui": "^9.2.0",
@@ -48,7 +49,12 @@
     "@types/node": "10.14.1",
     "@types/react": "^17.0.0",
     "@types/react-test-renderer": "^17.0.1",
+    "@typescript-eslint/eslint-plugin": "^5.59.2",
     "esbuild": "0.16.17",
+    "eslint": "^8.40.0",
+    "eslint-plugin-jsdoc": "^44.0.0",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "node-notifier": "^10.0.1",
