--- a/.github/workflows/publish-npm.yml
+++ b/.github/workflows/publish-npm.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           ref: main
       # limit releases to version changes - https://github.com/EndBug/version-check
@@ -27,15 +27,16 @@ jobs:
 
       - name: Setup .npmrc file for NPM registry
         if: steps.version_check.outputs.changed == 'true'
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
-          node-version: "14"
+          node-version: "16"
           registry-url: "https://registry.npmjs.org"
+          cache: 'yarn'
 
       - name: Install dependencies
         if: steps.version_check.outputs.changed == 'true'
-        run: yarn
-        
+        run: yarn install --immutable --prefer-offline
+
       - name: Build library
         if: steps.version_check.outputs.changed == 'true'
         run: yarn build
