ci(gh-actions): make better use of yarn cache when installing deps

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
         with:
           node-version: '16'
           cache: 'yarn'
-      - run: yarn
+      - run: yarn install --immutable --prefer-offline
       - run: yarn lint
       - run: yarn typecheck
       - run: yarn jest
