--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "@grafana/ui": "^9.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-select": "^5.2.1"
+    "react-select": "^5.2.1",
+    "rxjs": "7.8.0"
   },
   "devDependencies": {
     "@grafana/data": "^9.2.0",
