--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   "devDependencies": {
     "@grafana/data": "^10.0.0",
     "@grafana/eslint-config": "^6.0.0",
-    "@grafana/runtime": "^10.0.0",
+    "@grafana/runtime": "10.2.0",
     "@grafana/tsconfig": "^1.3.0-rc1",
     "@grafana/ui": "^10.0.0",
     "@rollup/plugin-node-resolve": "15.0.1",
