--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "peerDependencies": {
     "@emotion/css": "11.1.3",
     "@grafana/data": "^10.0.0",
-    "@grafana/runtime": "^10.0.0",
+    "@grafana/runtime": "10.0.0",
     "@grafana/ui": "^10.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -41,6 +41,7 @@
     "@grafana/tsconfig": "^1.3.0-rc1",
     "@grafana/ui": "^10.0.0",
     "@rollup/plugin-node-resolve": "15.0.1",
+    "@rollup/plugin-replace": "^5.0.4",
     "@swc/core": "^1.3.56",
     "@swc/jest": "^0.2.26",
     "@testing-library/jest-dom": "^5.16.5",
