--- a/package.json
+++ b/package.json
@@ -48,7 +48,9 @@
     "@testing-library/react-hooks": "^5.1.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/node": "10.14.1",
+    "@types/prismjs": "^1.26.3",
     "@types/react": "^17.0.0",
+    "@types/react-beautiful-dnd": "^13.1.7",
     "@types/react-test-renderer": "^17.0.1",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "esbuild": "0.16.17",
@@ -72,6 +74,9 @@
   },
   "dependencies": {
     "@types/uuid": "^8.3.3",
+    "prismjs": "^1.29.0",
+    "react-beautiful-dnd": "^13.1.1",
+    "react-use-id-hook": "^1.0.1",
     "semver": "^7.5.4",
     "uuid": "^8.3.2"
   }
