--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/react-hooks": "^5.1.0",
     "@testing-library/user-event": "^14.4.3",
+    "@types/lodash": "^4.14.202",
     "@types/node": "10.14.1",
     "@types/prismjs": "^1.26.3",
     "@types/react": "^17.0.0",
@@ -64,6 +65,7 @@
     "pretty-format": "25.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-select-event": "^5.5.1",
     "react-test-renderer": "^17.0.2",
     "rimraf": "^3.0.2",
     "rollup": "2.79.1",
@@ -74,6 +76,7 @@
   },
   "dependencies": {
     "@types/uuid": "^8.3.3",
+    "lodash": "^4.17.21",
     "prismjs": "^1.29.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-use-id-hook": "^1.0.1",
