--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@grafana/experimental",
+  "name": "experimental-builder",
   "version": "1.7.4",
   "description": "Experimental Grafana components and APIs",
   "main": "./dist/index.js",
