--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
   },
   "dependencies": {
     "@types/uuid": "^8.3.3",
+    "react-use": "^17.4.2",
     "semver": "^7.5.4",
     "uuid": "^8.3.2"
   }
