--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@grafana/experimental",
+  "name": "custom-experimental",
   "version": "1.7.4",
   "description": "Experimental Grafana components and APIs",
   "main": "./dist/index.js",
@@ -47,8 +47,11 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/react-hooks": "^5.1.0",
     "@testing-library/user-event": "^14.4.3",
+    "@types/lodash": "^4.14.202",
     "@types/node": "10.14.1",
+    "@types/prismjs": "^1.26.3",
     "@types/react": "^17.0.0",
+    "@types/react-beautiful-dnd": "^13.1.7",
     "@types/react-test-renderer": "^17.0.1",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "esbuild": "0.16.17",
@@ -72,7 +75,12 @@
   },
   "dependencies": {
     "@types/uuid": "^8.3.3",
+    "lodash": "^4.17.21",
+    "prismjs": "^1.29.0",
+    "react-beautiful-dnd": "^13.1.1",
+    "react-popper-tooltip": "^4.4.2",
     "react-use": "^17.4.2",
+    "react-use-id-hook": "^1.0.1",
     "semver": "^7.5.4",
     "uuid": "^8.3.2"
   }
