--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "peerDependencies": {
     "@emotion/css": "11.11.2",
     "@grafana/data": "^10.0.0",
+    "@grafana/e2e-selectors": "^10.0.0",
     "@grafana/runtime": "^10.0.0",
     "@grafana/ui": "^10.0.0",
     "react": "17.0.2",
@@ -36,6 +37,7 @@
   },
   "devDependencies": {
     "@grafana/data": "^10.0.0",
+    "@grafana/e2e-selectors": "^10.0.0",
     "@grafana/eslint-config": "^6.0.0",
     "@grafana/runtime": "^10.0.0",
     "@grafana/tsconfig": "^1.3.0-rc1",
@@ -65,6 +67,7 @@
     "pretty-format": "25.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-select-event": "^5.5.1",
     "react-test-renderer": "^17.0.2",
     "rimraf": "^3.0.2",
     "rollup": "2.79.1",
