--- a/package.json
+++ b/package.json
@@ -53,7 +53,6 @@
     "@types/node": "10.14.1",
     "@types/prismjs": "^1.26.3",
     "@types/react": "^17.0.0",
-    "@types/react-beautiful-dnd": "^13.1.7",
     "@types/react-test-renderer": "^17.0.1",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "esbuild": "0.16.17",
@@ -77,10 +76,10 @@
     "typescript": "^4.5.2"
   },
   "dependencies": {
+    "@hello-pangea/dnd": "^16.6.0",
     "@types/uuid": "^8.3.3",
     "lodash": "^4.17.21",
     "prismjs": "^1.29.0",
-    "react-beautiful-dnd": "^13.1.1",
     "react-popper-tooltip": "^4.4.2",
     "react-use": "^17.4.2",
     "semver": "^7.5.4",
