--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "author": "Grafana Labs <team@grafana.com> (https://grafana.com)",
   "license": "Apache-2.0",
   "peerDependencies": {
-    "@emotion/css": "^11.11.2",
+    "@emotion/css": "11.11.2",
     "@grafana/data": "^11.1.3",
     "@grafana/e2e-selectors": "^10.0.0",
     "@grafana/runtime": "^11.1.3",
