--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
   "license": "Apache-2.0",
   "peerDependencies": {
     "@emotion/css": "^11.11.2",
-    "@grafana/data": "^10.4.0",
-    "@grafana/e2e-selectors": "^10.0.0",
-    "@grafana/runtime": "^10.4.0",
-    "@grafana/ui": "^10.4.0",
+    "@grafana/data": "^10.4.0 || ^11.0.0",
+    "@grafana/e2e-selectors": "^10.0.0 || ^11.0.0",
+    "@grafana/runtime": "^10.4.0 || ^11.0.0",
+    "@grafana/ui": "^10.4.0 || ^11.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-select": "^5.8.0",
